designed the front page using css

--- a/To-do list.html
+++ b/To-do list.html
@@ -1,15 +1,23 @@
-<!DOCTYPE html>
+<!DOCTYPE html>2
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/To-do.css">
     <title>To do list </title>
 </head>
-<body>
+<body class="body">
+    <div class="header">
+        <h1><p>TO-DO lIST</p></h1>
+    </div>
+   
+
+
+
     <input class="js-input" placeholder="TASK" type="text">
     <input type="date" class="js-input-date">
     <button class="js-add">Add</button>
-    <div id="todo-list"class="js-paragraph"></div>
+    <div id="todo-list"class="container-todo"></div>
 
 
     <script type ="module" src="./scripts/To-do.js"></script>
