putting finshing touch on the mainpage

--- a/To-do list.html
+++ b/To-do list.html
@@ -27,11 +27,12 @@
 			<input type="date" class="js-input-date">
 			<button class="js-add">Add</button>
 		</div>
+		<h1>UPCOMING EVENT</h1>
 		<div id="todo-list"class="container-todo"></div>
 	</div>
 
 	<div class="footer">
-
+<a href="./dayevents.html">Next page</a>
 	</div>
 	<script type ="module" src="./scripts/To-do.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
