--- a/dayevents.html
+++ b/dayevents.html
@@ -4,20 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>day events</title>
+  <link rel="stylesheet" href="./css/dayevents.css">
 </head>
 <body>
-  <div>
+  <div class="whole-page">
       <div class="header">
 
       </div>
 
-      <div class="main-container">
-        
+      <div class="main-container" id="main">
+        <div>item1</div>
+        <div>item2</div>
+        <div>item3</div>
+        <div>item4</div>
+        <div>item5</div>
+        <div>item6</div>
+        <div>item7</div>
+        <div>item8</div>
+        <div>item9</div>
+        <div>item10</div>
+        <div>item11</div>
+        <div>item12</div>
+        <div>item13</div>
+        <div>item14</div>
+        <div>item15</div>
+        <div>item16</div>
+        <div>item17</div>
+        <div>item18</div>
+        <div>item19</div>
+        <div>item20</div>
       </div>
 
       <div class="footer">
 
       </div>
   </div>
+  <script src="./scripts/dayevents.js" type="module"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
 </body>
 </html>
