--- a/To-do list.html
+++ b/To-do list.html
@@ -9,15 +9,14 @@
 <body class="body">
 	<div class="header">
 		<div class="left-header">
-			<h1><p>TO-DO LIST</p></h1>
+			<h1>TO-DO LIST</h1>
 		</div>
-
-		<div class="middle-header">
-
-		</div>
-
-				<div class="right-header">
-
+		<div class="right-header">
+			<p>My lists</p>
+			<div class="new-list"></div>
+			<button class="list-button">+New list</button>
+			<button class="list-add">Add</button>
+			<input type="text" class="list-input">
 		</div>
 	</div>
 	
