--- a/To-do list.html
+++ b/To-do list.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/To-do.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanilla-calendar@latest/build/vanilla-calendar.min.css" />
     <title>To do list </title>
 </head>
 <body class="body">
@@ -31,10 +32,12 @@
 	</div>
 
 	<div class="footer">
+    <h2>📅 Embedded Calendar</h2>
+    <div id="calendar"></div>
 		<a href="./dayevents.html">Next page</a>
 	</div>
-	<script type ="module" src="./scripts/To-do.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
-	
+	   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+	<script type ="module" src="./scripts/To-do.js"></script>
 </body>
 </html>
