filter tasks by the days on the calendar

--- a/To-do list.html
+++ b/To-do list.html
@@ -27,7 +27,10 @@
 			<input type="date" class="js-input-date">
 			<button class="js-add">Add</button>
 		</div>
-		<h1>UPCOMING EVENT</h1>
+		<div class="content-header">
+			<h1>UPCOMING EVENT</h1>
+			<button class="js-show">Show all Tasks</button>
+		</div>
 		<div id="todo-list"class="container-todo"></div>
 	</div>
 
