--- a/To-do list.html
+++ b/To-do list.html
@@ -22,12 +22,15 @@
 	</div>
 	
 	<div class="content">
+		<div class="content-header">
+
+		</div>
 		<div class="data-input">
 			<input class="js-input" placeholder="TASK" type="text">
 			<input type="date" class="js-input-date">
 			<button class="js-add">Add</button>
 		</div>
-		<div class="content-header">
+		<div class="content-header-2">
 			<h1>UPCOMING EVENT</h1>
 			<button class="js-show">Show all Tasks</button>
 		</div>
