Upload full project

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	</div>
 
 	<div class="footer">
-    <h2>📅 Embedded Calendar</h2>
+    <h2>📅 Embedde Calendar</h2>
     <div id="calendar"></div>
 		<a href="./dayevents.html">Next page</a>
 	</div>
