used js to make the add button functional and added a button

--- a/To-do list.html
+++ b/To-do list.html
@@ -13,11 +13,11 @@
 			<h1>TO-DO LIST</h1>
 		</div>
 		<div class="right-header">
-			<p>My lists</p>
-			<div class="new-list"></div>
-			<button class="list-button">+New list</button>
-			<button class="list-add">Add</button>
-			<input type="text" class="list-input">
+				<p><h1>MY LISTS</h1></p>
+				<div class="new-list"></div>
+				<button class="list-button">New list</button>
+				<input type="text" class="list-input">
+				<button class="list-add">Add</button>
 		</div>
 	</div>
 	
